Fix promo structure on mobile

--- a/app/assets/stylesheets/layout/page_specific/_homepage.scss
+++ b/app/assets/stylesheets/layout/page_specific/_homepage.scss
@@ -57,18 +57,13 @@
 
 /* @lintingIgnoreEnd */
 
-.l-constrained.l-promos {
-  margin-bottom: $baseline-unit*2;
-  margin-top: $baseline-unit*6;
-}
-
 .l-homepage-promo {
+  overflow: hidden;
   margin-top: $baseline-unit*4;
-  margin-bottom: $baseline-unit*6;
+  margin-bottom: $baseline-unit*4;
 
   @include respond-to($mq-s) {
     @include column(6);
-    margin-top: $baseline-unit*4;
     min-height: 335px;
   }
 
@@ -78,7 +73,5 @@
 
   @include respond-to($mq-l) {
     @include column(3);
-    margin-bottom: $baseline-unit*4;
-    margin-top: $baseline-unit*4;
   }
 }
